--- a/responsive.css
+++ b/responsive.css
@@ -21,6 +21,10 @@
   }
 
   .menu-icon {
+    color: white;
+    float: right;
+    font-size: 25px;
+    padding: 21px 0;
     display: block;
   }
 
