--- a/stylesheet.css
+++ b/stylesheet.css
@@ -214,7 +214,7 @@ footer {
 }
 
 /* Ketik code Anda dibawah */
-span.menu-icon {
+.menu-icon {
   color: white;
   float: right;
   font-size: 25px;
