perubahan css di stylesheet dan responsive pada span menu icon

--- a/responsive.css
+++ b/responsive.css
@@ -20,11 +20,7 @@
     display: none;
   }
 
-  .menu-icon {
-    color: white;
-    float: right;
-    font-size: 25px;
-    padding: 21px 0;
+  span.menu-icon {
     display: block;
   }
 
